--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
 				<td>Radianter</td>
 				<td>在parker_cube的e10表基础上添加了e11新英雄</td>
 			</tr>
+			<tr style=font-size:20px onClick="window.open('https://legocro.github.io/CH-save-editor')"><!-- 第8行 -->
+				<td>存档修改器</td>
+				<td>Radianter</td>
+				<td>存档修改</td>
+			</tr>
 			
 		</table>
 		
